# nekko

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  opt.rs
src/cmd/: mod.rs
src/cmd/finder/: fzf.rs  mod.rs
src/config/: mod.rs  placeholder.rs  snippet.rs
src/expand/: mod.rs
src/finder/: fzf.rs  mod.rs
src/init/: mod.rs  nekko.zsh
src/list/: mod.rs
src/search/: mod.rs
test/snippets/: snippets-1.toml  snippets-1.yaml  snippets-2.toml  snippets-2.yml
test/snippets/snippets-3/: snippets-3.yaml
